<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:text="@string/new_announcement"
                android:textSize="30sp"
                android:textColor="@color/horizon_main"
                android:textStyle="bold"
                android:layout_marginBottom="30sp"/>

            <EditText
                android:id="@+id/textHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/catchy_header"
                android:inputType="text"/>

            <EditText
                android:id="@+id/textInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                android:maxLines="10"
                android:gravity="top|start"
                android:scrollbars="vertical"
                android:hint="@string/comprehensive_info"
                android:inputType="textMultiLine"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="10sp"/>

            <EditText
                android:id="@+id/textContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact"
                android:inputType="text"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="10sp"/>


            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30sp"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="30sp"/>

            <Button
                android:id="@+id/buttonPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publish"/>

            <Button
                android:id="@+id/buttonClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>