<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    style="@style/Theme.AppCompat.NoActionBar"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:text="@string/authorisation"
                android:textSize="30sp"
                android:textColor="@color/horizon_main"
                android:textStyle="bold"
                android:layout_marginBottom="30sp"/>

            <EditText
                android:id="@+id/textLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:maxLines="1"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="15sp"/>

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="30sp"/>

            <Button
                android:id="@+id/buttonSign"
                android:backgroundTint="@color/horizon_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"/>

            <Button
                android:id="@+id/buttonRegister"
                android:backgroundTint="@color/horizon_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>