<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyAdv.AppBarOverlay">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.tabs.TabItem
                android:layout_width="10sp"
                android:layout_height="?actionBarSize"/>

            <ImageView
                android:layout_width="50sp"
                android:layout_height="60sp"
                android:src="@drawable/app_icon"/>

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabLogout"
                style="@style/CustomFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10sp"
                app:srcCompat="@drawable/logout_icon"
                android:backgroundTint="@color/horizon_light"
                android:contentDescription="@string/refresh"/>
        </LinearLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                app:tabTextAppearance="@style/MyTabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1"/>

            <com.google.android.material.tabs.TabItem
                app:tabTextAppearance="@style/MyTabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>